--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
     "hover": "Hover#^2.0.2",
     "animate.css": "^3.5.2",
     "font-awesome": "^4.6.3",
-    "clipboard": "^1.5.12"
+    "clipboard": "^1.5.12",
+    "pusher-websocket-iso": "pusher#^3.1.0",
+    "bugsnag": "^2.5.0"
   }
 }
