--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-ide-helper": "^2.1",
         "nesbot/carbon": "^1.21",
         "vinkla/pusher": "^2.3",
-        "bugsnag/bugsnag-laravel": "1.*"
+        "bugsnag/bugsnag-laravel": "1.*",
+        "pusher/pusher-php-server": "^2.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
