--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "font-awesome": "^4.6.3",
     "clipboard": "^1.5.12",
     "pusher-websocket-iso": "pusher#^3.1.0",
-    "bugsnag": "^2.5.0"
+    "bugsnag": "^2.5.0",
+    "notie": "^3.2.0"
   }
 }
