--- a/bower.json
+++ b/bower.json
@@ -25,6 +25,8 @@
     "clipboard": "^1.5.12",
     "pusher-websocket-iso": "pusher#^3.1.0",
     "bugsnag": "^2.5.0",
-    "notie": "^3.2.0"
+    "notie": "^3.2.0",
+    "c3": "^0.4.11",
+    "d3": "^4.1.0"
   }
 }
