--- a/.env.example
+++ b/.env.example
@@ -29,5 +29,5 @@ PUSHER_APP_ID=
 PUSHER_KEY=
 PUSHER_SECRET=
 
-BUGSNAG_API_KEY_JAVASCRIPT=your-api-key-here
-BUGSNAG_API_KEY=your-api-key-here
+BUGSNAG_API_KEY_JS=
+BUGSNAG_API_KEY=
