Added sweet alert 2 to bower.json :night_with_stars:

--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "bugsnag": "^2.5.0",
     "notie": "^3.2.0",
     "c3": "^0.4.11",
-    "d3": "^4.1.0"
+    "d3": "^4.1.0",
+    "sweetalert2": "latest"
   },
   "resolutions": {
     "d3": "~3.5.0"
